--- a/src/main/resources/view/ExpenseListPanel.fxml
+++ b/src/main/resources/view/ExpenseListPanel.fxml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Region?>
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <ListView fx:id="expenseListView" VBox.vgrow="ALWAYS">
-      <minWidth>
-          <Region fx:constant="USE_COMPUTED_SIZE"/>
-      </minWidth>
-  </ListView>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-</VBox>
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <StackPane fx:id="budgetTitle" styleClass="page-name" BorderPane.alignment="CENTER">
+         <children>
+            <VBox alignment="CENTER" maxHeight="70.0" styleClass="page-name" StackPane.alignment="CENTER">
+               <children>
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label fx:id="budgetName" text="budget name">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="budgetPeriod" text="start - end" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+                  <StackPane prefHeight="150.0" prefWidth="200.0">
+                     <children>
+                        <ProgressBar fx:id="budgetStatusBar" prefWidth="3000.0" progress="0.34" styleClass="budget-bar" />
+                        <Label fx:id="budgetStatusText" text="\$total / $budget" />
+                     </children>
+                  </StackPane>
+               </children>
+            </VBox>
+         </children>
+      </StackPane>
+   </top>
+   <left>
+      <Button fx:id="previous" mnemonicParsing="false" rotate="-90.0" text="Button" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Button fx:id="next" mnemonicParsing="false" rotate="90.0" text="Button" BorderPane.alignment="CENTER" />
+   </right>
+   <center>
+      <BorderPane BorderPane.alignment="CENTER">
+         <center>
+           <ListView fx:id="expenseListView" minWidth="300.0" />
+         </center>
+         <left>
+            <Region prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
+         </left>
+         <right>
+            <Region prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
+         </right>
+      </BorderPane>
+   </center>
+</BorderPane>
