--- a/src/main/resources/view/BudgetPanel.fxml
+++ b/src/main/resources/view/BudgetPanel.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<BorderPane fx:id="budgetPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="budgetPanel" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <StackPane fx:id="budgetCardPlaceholder" prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </top>
    <center>
-      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <ListView fx:id="expenseListView" prefHeight="200.0" prefWidth="200.0" />
-         </children></StackPane>
+      <StackPane fx:id="expenseListPanelPlaceholder" BorderPane.alignment="CENTER" />
    </center>
    <left>
-      <Button fx:id="previous" mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+      <Button fx:id="previous" mnemonicParsing="false" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <Button fx:id="next" mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+      <Button fx:id="next" mnemonicParsing="false" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
