--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,97 +1,110 @@
+* {
+    -green1: #538c49;
+    -green2: #81d681;
+    -green3: #dbedd3;
+    -moneyout: #cc2c29;
+    -black1: black;
+    -grey1: #aaaaaa;
+    /*-status-background-colour: derive(#1d1d1d, 30%);*/
+    -status-background-colour: -green1;
+    /*-status-border-colour: derive(#1d1d1d, 30%);*/
+    -status-border-colour: transparent;
+    -status-text-colour: white;
+    -font-lightweight: "Segoe UI Light";
+    -font-dark: black;
+    -font-semibold: "Segoe UI Semibold";
+    -progress-bar-overbudget: -moneyout;
+    -progress-bar-inbudget: #3219cc
+}
+
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: -font-semibold;
 }
 
 .list-view {
-    -fx-background-insets: 0;
-    -fx-padding: 0;
-    -fx-background-color: #dceed4;
+    -fx-background-color: -green3;
 }
 
 .list-cell {
-    -fx-label-padding: 0 0 0 0;
-    -fx-graphic-text-gap : 0;
-    -fx-background-insets: 0 0 0 0;
     -fx-background-color: transparent;
 }
 
 
 .list-cell .label {
-    -fx-text-fill: #000000;
+    -fx-text-fill: -black1;
 }
 
 .list-cell #index {
-    -fx-text-fill: #a8a8a8;
+    -fx-text-fill: -grey1;
 }
 
 .list-cell:filled #price {
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: -font-semibold;
     -fx-font-size: 18px;
-    -fx-text-fill: #ec311e;
+    -fx-text-fill: -moneyout;
     -fx-padding: 0 5 0 0;
 }
 
 .list-cell:filled #index,
 .list-cell:filled #description {
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: -font-semibold;
     -fx-font-size: 16px;
 }
 
 .pane-with-border {
-    -fx-background-color: #dceed4;
-    -fx-background-insets: 0;
+    -fx-background-color: -green3;
 }
 
 .status-bar {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: -status-background-colour;
 }
 
 .result-display {
     -fx-background-color: transparent;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: -font-lightweight;
     -fx-font-size: 12px;
-    -fx-text-fill: black;
+    -fx-text-fill: -font-dark;
 }
 
 .result-display .label {
-    -fx-text-fill: black !important;
+    -fx-text-fill: -black1 !important;
 }
 
 .status-bar .label {
-    -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-font-family: -font-lightweight;
+    -fx-text-fill: -status-text-colour;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-background-color: -status-background-colour;
+    -fx-border-color: -status-border-colour;
     -fx-border-width: 1px;
 }
 
 .status-bar-with-border .label {
-    -fx-text-fill: white;
+    -fx-text-fill: -status-text-colour;
 }
 
 .context-menu {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: -status-background-colour;
 }
 
 .context-menu .label {
-    -fx-text-fill: white;
+    -fx-text-fill: -status-text-colour;
     -fx-font-size: 10px;
 }
 
 .menu-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: -status-background-colour;
 }
 
 .menu-bar .label {
     -fx-font-size: 10pt;
-    -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-font-family: -font-lightweight;
+    -fx-text-fill: -status-text-colour;
     -fx-opacity: 0.9;
 }
 
@@ -111,29 +124,35 @@
 .scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
     -fx-shape: " ";
     -fx-fill: transparent;
-
 }
 
 .page-name {
-    -fx-background-color: #56be40;
+    -fx-background-color: -green1;
     -fx-background-radius: 0 0 10 10;
     -fx-padding: 10;
-    -fx-graphic-text-gap: 0;
 }
 
-.budget-bar .progress-bar {
-    /*???&*/
+.progress-bar {
+    -fx-background-color: white;
+}
+
+.progress-bar > .track {
+    -fx-background-color: -green2;
+}
+
+.progress-bar .bar {
+    -fx-background-color: -progress-bar-colour;
 }
 
 .command-box {
-    -fx-background-color: #56be40;
+    -fx-background-color: -green1;
 }
 
 #cardPane {
     -fx-background-color: #e6e6e6;
     -fx-background-radius: 10;
     -fx-border-width: 0;
-    -fx-effect: dropshadow( gaussian, lightgray , 10 , .01, 1 , 5 )
+    -fx-effect: dropshadow( gaussian, rgba(211, 211, 211, 0.57), 10 , .01, 1 , 5 )
 }
 
 
@@ -144,9 +163,9 @@
 
 #commandTextField {
     -fx-background-color: white;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: -font-lightweight;
     -fx-font-size: 13pt;
-    -fx-text-fill: black;
+    -fx-text-fill: -font-dark;
 }
 
 #filterField, #expenseListPanel, #expenseWebpage {
@@ -154,8 +173,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: #dceed4;
-    -fx-background-radius: 0;
+    -fx-background-color: -green3;
 }
 
 #tags {
