Enable switching content of window between budgetList, primaryBudget, expenseList

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,6 +3,8 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -50,11 +52,18 @@
                  </StackPane>
          
                        <StackPane fx:id="statusbarPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER" />
+                     <ButtonBar fx:id="windowSelectionBar" prefHeight="40.0" prefWidth="200.0">
+                       <buttons>
+                         <Button fx:id="budgetListButton" mnemonicParsing="false" onAction="#viewBudgetListPanel" text="budget list" />
+                           <Button fx:id="primaryBudgetButton" mnemonicParsing="false" onAction="#viewBudgetPanel" text="primary budget" />
+                           <Button fx:id="expenseListButton" mnemonicParsing="false" onAction="#viewExpenseListPanel" text="all expenses" />
+                       </buttons>
+                     </ButtonBar>
                   </children>
                </VBox>
             </bottom>
             <center>
-          <StackPane fx:id="expenseListPanelPlaceholder" BorderPane.alignment="CENTER" />
+          <StackPane fx:id="panelPlaceholder" BorderPane.alignment="CENTER" />
             </center>
          </BorderPane>
     </Scene>
