--- a/src/main/resources/view/BudgetCard.fxml
+++ b/src/main/resources/view/BudgetCard.fxml
@@ -11,51 +11,54 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox alignment="CENTER" maxHeight="70.0" styleClass="page-name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <GridPane>
-               <columnConstraints>
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="50.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" percentWidth="30.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label fx:id="budgetName" text="budget name">
-                     <font>
-                        <Font size="21.0" />
-                     </font>
-                  </Label>
-                  <TextFlow textAlignment="CENTER" GridPane.columnIndex="2">
-                     <children>
-                        <Label fx:id="budgetStart" text="\$start" />
-                        <Label fx:id="separator" text="-" />
-                        <Label fx:id="budgetEnd" text="\$end" />
-                     </children>
-                  </TextFlow>
-               </children>
-            </GridPane>
-            <StackPane>
-               <children>
-                  <AnchorPane>
-                     <children>
-                        <ProgressBar fx:id="budgetProgressBar" progress="0.34" styleClass="budget-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-                  <TextFlow textAlignment="CENTER">
-                     <children>
-                        <Label fx:id="budgetTotalAmount" text="\$total" />
-                        <Label fx:id="divider" text="/" />
-                        <Label fx:id="budgetAllocatedAmount" text="\$amount" />
-                     </children>
-                  </TextFlow>
-               </children>
-            </StackPane>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane fx:id="budgetCardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <VBox alignment="CENTER" maxHeight="70.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="50.0"/>
+                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0"/>
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" percentWidth="30.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <Label fx:id="budgetName" text="budget name">
+                            <font>
+                                <Font size="21.0"/>
+                            </font>
+                        </Label>
+                        <TextFlow textAlignment="CENTER" GridPane.columnIndex="2">
+                            <children>
+                                <Label fx:id="budgetStart" text="\$start"/>
+                                <Label fx:id="separator" text="-"/>
+                                <Label fx:id="budgetEnd" text="\$end"/>
+                            </children>
+                        </TextFlow>
+                    </children>
+                </GridPane>
+                <StackPane>
+                    <children>
+                        <AnchorPane>
+                            <children>
+                                <ProgressBar fx:id="budgetProgressBar" progress="0.34" styleClass="budget-bar"
+                                             AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                             AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                            </children>
+                        </AnchorPane>
+                        <TextFlow textAlignment="CENTER">
+                            <children>
+                                <Label fx:id="budgetTotalAmount" text="\$total"/>
+                                <Label fx:id="divider" text="/"/>
+                                <Label fx:id="budgetAllocatedAmount" text="\$amount"/>
+                            </children>
+                        </TextFlow>
+                    </children>
+                </StackPane>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
