--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,20 +1,23 @@
 * {
-    -green1: #538c49;
-    -green2: #81d681;
-    -green3: #dbedd3;
+    -colour-light: #42b883;
+    -colour-medium: #347474;
+    -colour-medium2: #73969c;
+    -colour-dark: #35495e;
+    -colour-highlight: #ff7e67;
+    
     -moneyout: #cc2c29;
     -black1: black;
     -grey1: #aaaaaa;
     /*-status-background-colour: derive(#1d1d1d, 30%);*/
-    -status-background-colour: -green1;
+    -status-background-colour: -colour-medium;
     /*-status-border-colour: derive(#1d1d1d, 30%);*/
     -status-border-colour: transparent;
-    -status-text-colour: white;
+    -text-colour1: white;
     -font-lightweight: "Segoe UI Light";
     -font-dark: black;
     -font-semibold: "Segoe UI Semibold";
     -progress-bar-overbudget: #ac4e47;
-    -progress-bar-inbudget: #77accc
+    -progress-bar-inbudget: -colour-light
 }
 
 .text-field {
@@ -23,7 +26,7 @@
 }
 
 .list-view {
-    -fx-background-color: -green3;
+    -fx-background-color: -colour-medium2;
 }
 
 .list-cell {
@@ -35,25 +38,8 @@
     -fx-text-fill: -black1;
 }
 
-.list-cell #index {
-    -fx-text-fill: -grey1;
-}
-
-.list-cell:filled #price {
-    -fx-font-family: -font-semibold;
-    -fx-font-size: 18px;
-    -fx-text-fill: -moneyout;
-    -fx-padding: 0 5 0 0;
-}
-
-.list-cell:filled #index,
-.list-cell:filled #description {
-    -fx-font-family: -font-semibold;
-    -fx-font-size: 16px;
-}
-
 .pane-with-border {
-    -fx-background-color: -green3;
+    -fx-background-color: -colour-medium;
 }
 
 .status-bar {
@@ -108,6 +94,25 @@
     -fx-opacity: 0.9;
 }
 
+.placeholder {
+    -fx-background-color: -colour-medium2;
+}
+
+.placeholder .label{
+    -fx-font-family: -font-family-lightweight;
+    -fx-font-size: 20px;
+}
+
+#titlePlaceHolder {
+    -fx-background-color: -colour-medium;
+}
+
+#titlePlaceHolder .label {
+    -fx-text-fill: -text-colour1;
+    -fx-font-family: -font-family-semibold;
+    -fx-padding: 10;
+}
+
 
 /*
  * Metro style Push Button
@@ -127,12 +132,12 @@
 }
 
 #budgetCardPane {
-    -fx-background-color: -green1;
+    -fx-background-color: -colour-medium;
     -fx-padding: 10;
 }
 
 .progress-bar > .track {
-    -fx-background-color: -green2;
+    -fx-background-color: -colour-medium2;
 }
 
 .progress-bar .bar {
@@ -141,14 +146,35 @@
 }
 
 .command-box {
-    -fx-background-color: -green1;
+    -fx-background-color: -colour-medium;
 }
 
 #expenseCardPane {
     -fx-background-color: #e6e6e6;
     -fx-background-radius: 10;
     -fx-border-width: 0;
-    -fx-effect: dropshadow(gaussian, rgba(211, 211, 211, 0.57), 10, .01, 1, 5)
+    -fx-effect: dropshadow(gaussian, rgba(31, 31, 31, 0.37), 10, .01, 1, 5)
+}
+
+#expenseCardPane #clip {
+    -fx-fill: -colour-highlight;
+}
+
+
+#expenseCardPane .label {
+    -fx-font-family: -font-semibold;
+    -fx-font-size: 16px;
+}
+
+#expenseCardPane #index {
+    -fx-text-fill: -grey1;
+}
+
+#expenseCardPane #price {
+    -fx-font-family: -font-semibold;
+    -fx-font-size: 18px;
+    -fx-text-fill: -moneyout;
+    -fx-padding: 0 5 0 0;
 }
 
 
@@ -169,7 +195,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: -green3;
+    -fx-background-color: -colour-medium2;
 }
 
 #tags {
