Fix second match onwards of placeholder not being replaced
and fix text area not filling width

--- a/src/main/resources/view/syntax-highlighting.css
+++ b/src/main/resources/view/syntax-highlighting.css
@@ -1,6 +1,7 @@
 #SyntaxBox {
     -fx-font-size: 20px;
     -fx-font-family: Monospaced;
+    -fx-background-color: red;
 }
 
 #SyntaxBox .text-area {
