--- a/src/main/resources/view/BudgetPanel.fxml
+++ b/src/main/resources/view/BudgetPanel.fxml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<BorderPane fx:id="budgetPanel" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="budgetPanel" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@DarkTheme.css"/>
-        <URL value="@Extensions.css"/>
+        <URL value="@DarkTheme.css" />
+        <URL value="@Extensions.css" />
     </stylesheets>
     <top>
-        <StackPane fx:id="budgetCardPlaceholder" BorderPane.alignment="CENTER"/>
+        <StackPane fx:id="budgetCardPlaceholder" BorderPane.alignment="CENTER" />
     </top>
     <center>
-        <StackPane fx:id="expenseListPanelPlaceholder" BorderPane.alignment="CENTER"/>
+        <StackPane fx:id="expenseListPanelPlaceholder" BorderPane.alignment="CENTER" />
     </center>
-    <left>
-        <Button fx:id="previous" mnemonicParsing="false" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER"/>
-    </left>
-    <right>
-        <Button fx:id="next" mnemonicParsing="false" prefWidth="30.0" text="Button" BorderPane.alignment="CENTER"/>
-    </right>
 </BorderPane>
